import 'package:flutter_app/data/datasources/order_data_source.dart';
import 'package:flutter_app/models/cart.dart';
import 'package:http/http.dart' as http; // Assuming you'll use http for actual API calls
import 'dart:convert'; // For jsonEncode

class RemoteOrderDataSource implements OrderDataSource {
  final http.Client client;
  final String baseUrl = "https://api.example.com"; // Replace with your actual API base URL

  RemoteOrderDataSource(this.client);

  @override
  Future<void> placeOrder(Cart cart) async {
    // This is a placeholder for actual API call
    // In a real app, you would serialize the cart and send it to your backend
    print("Placing order (remote): \${cart.items.map((e) => e.name).join(', ')}");
    print("Total price: \${cart.totalPrice}");

    // Example of a POST request (adjust headers and body as needed)
    /*
    final response = await client.post(
      Uri.parse('\$baseUrl/orders'),
      headers: {'Content-Type': 'application/json'},
      body: jsonEncode(cart.toJson()), // Assuming Cart has a toJson method
    );

    if (response.statusCode == 201) {
      // Order created successfully
      print("Order placed successfully via API.");
    } else {
      // Handle error
      print("Failed to place order via API. Status code: \${response.statusCode}");
      throw Exception('Failed to place order');
    }
    */
    await Future.delayed(const Duration(seconds: 1)); // Simulate network delay
  }
}
