

import 'package:flutter/material.dart';
import '../models/menu_item.dart';
import 'package:flutter_riverpod/flutter_riverpod.dart';
import '../providers/cart_provider.dart';

class MenuCard extends ConsumerWidget { // Changed to ConsumerWidget
  final MenuItem item;

  const MenuCard({
    super.key,
    required this.item,
  });

  @override
  Widget build(BuildContext context, WidgetRef ref) { // Added WidgetRef
    final cart = ref.watch(cartProvider);
    final quantity = cart.items.firstWhere((cartItem) => cartItem.id == item.id, orElse: () => CartItem(id: item.id, name: item.name, price: item.price, imageUrl: item.imageUrl, quantity: 0)).quantity;

    return Card( // Uses CardTheme from main.dart
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.stretch,
        children: [
          Expanded(
            flex: 3, // Give more space to the image
            child: ClipRRect(
              borderRadius: const BorderRadius.vertical(top: Radius.circular(15.0)), // Match card's border radius
              child: Image.asset(
                item.imageUrl,
                fit: BoxFit.cover,
                errorBuilder: (context, error, stackTrace) {
                  return Container(
                    color: Colors.grey[800], // Placeholder color for error
                    child: const Icon(
                      Icons.coffee_maker_outlined,
                      size: 50,
                      color: Color(0xFFEFEBE9) // Light beige icon color
                    ),
                  );
                },
              ),
            ),
          ),
          Expanded(
            flex: 2, // Space for text content and button
            child: Padding(
              padding: const EdgeInsets.all(12.0),
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                mainAxisAlignment: MainAxisAlignment.spaceBetween,
                children: [
                  Column(
                    crossAxisAlignment: CrossAxisAlignment.start,
                    children: [
                      Text(
                        item.name,
                        style: Theme.of(context).textTheme.titleLarge?.copyWith(
                              fontSize: 18,
                            ),
                        maxLines: 1,
                        overflow: TextOverflow.ellipsis,
                      ),
                      const SizedBox(height: 4.0),
                      Text(
                        item.description,
                        style: Theme.of(context).textTheme.bodyMedium?.copyWith(
                              fontSize: 12,
                              color: const Color(0xFFBDBDBD),
                            ),
                        maxLines: 1,
                        overflow: TextOverflow.ellipsis,
                      ),
                    ],
                  ),
                  Row(
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    crossAxisAlignment: CrossAxisAlignment.center,
                    children: [
                      Text(
                        '¥${item.price.toStringAsFixed(0)}',
                        style: Theme.of(context).textTheme.titleLarge?.copyWith(
                              color: const Color(0xFFBE9C91),
                              fontSize: 16.0,
                              fontWeight: FontWeight.bold,
                            ),
                      ),
                      Row(
                        children: [
                          IconButton(
                            icon: const Icon(Icons.remove_circle_outline),
                            color: const Color(0xFFBE9C91),
                            onPressed: () {
                              ref.read(cartProvider.notifier).removeItem(item.id);
                            },
                          ),
                          Text(quantity.toString(), style: Theme.of(context).textTheme.titleMedium),
                          IconButton(
                            icon: const Icon(Icons.add_circle_outline),
                            color: const Color(0xFFBE9C91),
                            onPressed: () {
                              ref.read(cartProvider.notifier).addItem(item);
                            },
                          ),
                        ],
                      ),
                    ],
                  ),
                ],
              ),
            ),
          ),
        ],
      ),
    );
  }
}


